Missing stderr output when using run-webkit-tests https://bugs.webkit.org/show_bug.cgi?id=100709

Reviewed by Dirk Pranke.

Appends #EOF to the end of the stderr output only at the end of a test,
not possibly part-way through. This will allow all of the stderr output
to appear on the results page after running run-webkit-tests.

* DumpRenderTree/chromium/TestEventPrinter.cpp:
(TestEventPrinter::handleTextFooter):
(TestEventPrinter::handleTestFooter):


git-svn-id: svn://svn.chromium.org/blink/trunk@133120 bbb929c8-8fbe-4397-9dbb-9b2b20218538