third_party/WebKit/Tools/DumpRenderTree/chromium/TestEventPrinter.cpp
@@ -66,7 +66,6 @@ void TestEventPrinter::handleTextHeader() const
 void TestEventPrinter::handleTextFooter() const
 {
     printf("#EOF\n");
-    fprintf(stderr, "#EOF\n");
 }
 
 void TestEventPrinter::handleAudio(const void* audioData, size_t audioSize) const
@@ -96,6 +95,7 @@ void TestEventPrinter::handleImage(const char* actualHash, const char* expectedH
 void TestEventPrinter::handleTestFooter(bool) const
 {
     printf("#EOF\n");
+    fprintf(stderr, "#EOF\n");
 }
 
 void TestEventPrinter::handleBinary(const void* data, size_t size) const
